Add Spotbugs code analysis and fix null pointers